2015-01-29  Jerold Haas  <jeroldhaas@gmail.com>

	* RoundButton.cs: alter DrawBackground to use gtkrc settings

	* IdeStartup.cs: added section for other devs to implement
	MONODEVELOP_DARK Environment variable... also commented out
	selector code for prototyping use

	* gtkrc: replace default gtkrc for finding out what doesn't
	pull from gtkrc (this one's pretty extensive)


2010-08-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide/RootWorkspace.cs:
	* MonoDevelop.Ide.Gui/AuthorInformation.cs:
	* MonoDevelop.Ide.StandardHeader/StandardHeaderService.cs:
	* MonoDevelop.Ide.Gui.OptionPanels/AuthorInformationPanel.cs:
	* MonoDevelop.Ide.Gui.OptionPanels/GlobalAuthorInformationPanel.cs:
	  Moved AuthorInformation to MD.Projects. Use the new
	  AuthorInformation added to Solution and SolutionItem. Track
	  api changes.

2010-08-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide/RootWorkspace.cs: Pick a good default
	  configuration when loading a solution for the first time.
	  Fixes bug 627297 - Projects from VS.NET solution are not
	  build.

2010-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/SolutionNodeBuilder.cs:
	  Don't show the project count in the solution node. That
	  space can be used for more useful things.

2010-07-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Commands/EditCommands.cs:
	* MonoDevelop.Ide.Commands/ViewCommands.cs: Use delegation
	  methods.

2010-07-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs: Use the parser service
	  parser queue to update parse documents (=> fewer threads &
	  fixes a possible dead lock)

2010-07-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs:
	* MonoDevelop.Ide/RootWorkspace.cs:
	* MonoDevelop.Ide/ProjectOperations.cs: Changed document
	  parsing/text file provider now returns texteditordata
	  provider.
